k8s-resources/tezos-private-node-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: tezos-private-node
spec:
  ports:
  - port: 9732
  selector:
    app: tezos-private-node
  clusterIP: None
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tezos-private-baking-node-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: tezos-private-baking-node
  policyTypes:
  - Ingress
  - Egress
  egress:
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
  - ports:
    - port: 9732
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: tezos-public-node
  ingress:
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
  - ports:
    - port: 9732
      protocol: TCP
    from:
    - podSelector:
        matchLabels:
          app: tezos-public-node
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tezos-private-baking-node
spec:
  selector:
    matchLabels:
      app: tezos-private-baking-node
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tezos-private-baking-node
    spec:
      securityContext:
        fsGroup: 100
      containers:
      - name: tezos-private-node
        image: tezos/tezos:alphanet
        args: [ "tezos-node", "--private-mode", "--peer", "tezos-public-node-0.tezos-public-node", "--peer", "tezos-public-node-1.tezos-public-node", "--connections", "2" ]
        ports:
        - containerPort: 9732
          name: tezos-port
        volumeMounts:
        - name: tezos-private-node-storage
          mountPath: /var/run/tezos/node
      - name: tezos-endorser-with-remote-signer
        image: gcr.io/<MY REGISTRY>/tezos-endorser-with-remote-signer:v1
        args: [ "k8s-baker" ]
        volumeMounts:
        - name: tezos-private-node-storage
          readOnly: true
          mountPath: /var/run/tezos/node
        - name: tezos-private-client-storage
          mountPath: /var/run/tezos/client
      - name: tezos-accuser
        image: tezos/tezos:alphanet
        args: [ "tezos-accuser" ]
        volumeMounts:
        - name: tezos-private-client-storage
          readOnly: true
          mountPath: /var/run/tezos/client
      - name: tezos-baker-with-remote-signer
        image: gcr.io/<MY REGISTRY>/tezos-baker-with-remote-signer:v1
        args: [ "k8s-baker" ]
        volumeMounts:
        - name: tezos-private-node-storage
          readOnly: true
          mountPath: /var/run/tezos/node
        - name: tezos-private-client-storage
          mountPath: /var/run/tezos/client
      volumes:
      - name: tezos-private-client-storage
        emptyDir: {}
      - name: tezos-private-node-storage
        persistentVolumeClaim:
          claimName: tezos-private-node-claim
---
apiVersion: v1
kind: Service
metadata:
  name: tezos-remote-signer-forwarder
spec:
  type: NodePort
  ports:
  - port: 8443
    # signer is not meant to be accessed externally; I'd rather not set this but it's mandatory
    # it's fine because the firewall on the nodes won't take connections
    targetPort: 8443
    name: remote-signer
  - port: 58255
    targetPort: 58255
    name: ssh-forwarding-ingress
  selector:
    app: tezos-remote-signer-forwarder
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tezos-remote-signer-forwarder
spec:
  selector:
    matchLabels:
      app: tezos-remote-signer-forwarder
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tezos-remote-signer-forwarder
    spec:
      securityContext:
        fsGroup: 100
      containers:
      - name: tezos-remote-signer-forwarder
        image: gcr.io/<MY PROJECT>/tezos-remote-signer-forwarder:v9
        ports:
        - containerPort: 58255
          name: ssh
        - containerPort: 8443
          name: signer
